2000-07-11  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (real_fetch_mail): Changed to use 
	camel_folder_move_message_to () rather than get_message () and then
	append_message (). This also makes it so we don't have to worry about
	fetching message flags to pass to the new append_message () method.

	* folder-browser.c (folder_browser_load_folder): Disable
	Search capability menu/entry if folder doesn't support it.

	* message-list.c (message_list_regenerate): Don't perform
	a search if the folder doesn't support it.

2000-07-11  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (real_send_mail): Set the post_send_data flag rather
	than toggling it. (Maybe we'll need more control over it later,
	but for now, the only flag we set is "replied", and we want
	that set, not toggled.)

2000-07-10  Dan Winship  <danw@helixcode.com>

	* folder-browser-factory.c (control_activate): Work with both
	current and 0.15 bonobo

	* kill more debugging messages

	* mail-ops.c (real_fetch_mail): Don't multiply free dest_url.

	* message-list.c (message_list_select): Update
	message_list_select_next to do either next or previous.

	* folder-browser.c (etable_key): Make 'n' and 'p' do next and
	previous unread message.

	* mail-ops.c (select_first_unread): Update.
	(real_fetch_mail): clean up a bit.

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-ops.c (forward_msg): Initialize `fwd_subj' to NULL if
	`from' is NULL.

2000-07-10  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (real_fetch_mail): Fixed broken POP fetching

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* component-factory.c: Removed variable `browsers'.
	(create_view): Don't update it.
	(owner_unset_cb): Don't sync the folders here anymore, because at
	this point the folder browser is dead already so we cannot get a
	valid list of folders from it anymore.

	* folder-browser.c (folder_browser_destroy): Sync the associated
	mailbox first.
