@@ -1,3 +1,8 @@
+2000-07-12  Peter Williams  <peterw@helixcode.com>
+
+	* mail-display.c (save_data): Change from evolution_dir to
+	g_get_home_dir() for default location of save file.
+
 2000-07-11  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* mail-ops.c (real_fetch_mail): Changed to use 
